Fixing gradle issues